--- a/src/assets/component/_reset.scss
+++ b/src/assets/component/_reset.scss
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    
 }
 
 ul{
@@ -13,4 +14,7 @@ li{
 }
 a{
     text-decoration: none;
+}
+body{
+    background: linear-gradient(90deg, rgba(186,35,254,1) 0%, rgba(159,47,255,1) 18%, rgba(132,56,250,1) 100%);
 }
