--- a/src/assets/component/_variable.scss
+++ b/src/assets/component/_variable.scss
@@ -7,7 +7,9 @@ $--third-bg-color: #e3e3e3;
 $---grey: #4b4b4b;
 $--color-black: #000;
 $--color-white: #fff;
+$--color-white-header: rgba(255, 255, 255, 0.785);
 $--red: #c0392b;
+$--color-p: #F5F5F5;
 
 
 // header-size
@@ -17,6 +19,7 @@ $--top-header-size: 30px;
 $--btn-bg: #000;
 $--btn-border-color: #000;
 $--btn-color: #fff;
+
 
 //bg - menu bar
 $--bg-menubar: rgba(0, 0, 0, 0.557);
