--- a/src/assets/component/_header.scss
+++ b/src/assets/component/_header.scss
@@ -2,15 +2,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 80px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    padding: 20px 90px;
+    box-shadow: rgba(61, 64, 66, 0.2) 0px 8px 24px;
     .logo{
         a{
-            padding: 10px 20px;
-            color: $--color-black;
-            font-size: 25px;
-            font-weight: bold;
-            letter-spacing: 1.2px;
+            // padding: 10px 20px;
+            // color: $--color-white;
+            // font-size: 25px;
+            // font-weight: bold;
+            // letter-spacing: 1.2px;
+            // font-family: 'Montserrat', sans-serif;
+            img{
+                width: 90px;
+            }
         }
     }
     .menu{
@@ -20,11 +24,11 @@
             position: relative;
             }
             a{
-                color: $--color-black;
+                color: $--color-white-header;
                 font-size: 16px;
                 display: block;
                 font-weight: bold;
-                text-transform: uppercase;
+                font-size: 18px;
                 &:hover{
                     color: blue;
                 }
