--- a/src/assets/component/_responsive.scss
+++ b/src/assets/component/_responsive.scss
@@ -89,6 +89,13 @@
         }
        
     }
+
+    .about{
+        .about-container{
+            display: flex;
+            flex-direction: column-reverse;
+        }
+    }
     
 }
 @media (max-width: 440px){
