--- a/src/assets/component/_variable.scss
+++ b/src/assets/component/_variable.scss
@@ -11,7 +11,8 @@ $--color-white-header: rgba(255, 255, 255, 0.785);
 $--red: #c0392b;
 $--color-p: #F5F5F5;
 
-
+//
+$--bg-btn: #1fb6fc;
 // header-size
 $--top-header-size: 30px;
 
