--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -1,6 +1,7 @@
 @import './component/variable';
 @import './component/header';
 @import './component/banner';
+@import './component/about';
 @import './component/slider';
 @import './component/mixin';
 @import './component/reset';
