--- a/src/assets/component/_header.scss
+++ b/src/assets/component/_header.scss
@@ -14,6 +14,7 @@
             // font-family: 'Montserrat', sans-serif;
             img{
                 width: 90px;
+                filter: contrast(200%);
             }
         }
     }
