--- a/src/assets/component/_reset.scss
+++ b/src/assets/component/_reset.scss
@@ -3,7 +3,6 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    
 }
 
 ul{
@@ -17,4 +16,7 @@ a{
 }
 body{
     background: linear-gradient(90deg, rgba(186,35,254,1) 0%, rgba(159,47,255,1) 18%, rgba(132,56,250,1) 100%);
+}
+html{
+    scroll-behavior: smooth;
 }
