--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -8,6 +8,7 @@
 }
 .header .logo a img {
   width: 90px;
+  filter: contrast(200%);
 }
 .header .menu {
   display: flex;
@@ -45,11 +46,7 @@
   display: none;
 }
 
-.banner {
-  overflow: hidden;
-}
 .banner .banner-container {
-  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -76,6 +73,49 @@
   -o-object-fit: cover;
      object-fit: cover;
   padding: 20px;
+}
+
+.about .about-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+}
+.about .about-container .about-banner img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  filter: brightness(120%);
+}
+.about .about-container .about-content {
+  max-width: 500px;
+}
+.about .about-container .about-content h3 {
+  font-weight: 600;
+  font-size: 22px;
+  letter-spacing: 1;
+  color: rgba(255, 255, 255, 0.785);
+}
+.about .about-container .about-content h1 {
+  font-size: 36px;
+  letter-spacing: 1.5;
+  color: #fff;
+  font-family: "Open Sans", sans-serif;
+}
+.about .about-container .about-content .about-text {
+  margin: 20px 0;
+}
+.about .about-container .about-content .about-text p {
+  margin-bottom: 10px;
+  letter-spacing: 1.2px;
+  color: #F5F5F5;
+}
+.about .about-container .about-content a {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #1fb6fc;
+  color: #fff;
 }
 
 /* xong sang bên kia có nút button sẽ bỏ vào or vào index.scss như sau
@@ -107,6 +147,10 @@ a {
 
 body {
   background: linear-gradient(90deg, rgb(186, 35, 254) 0%, rgb(159, 47, 255) 18%, rgb(132, 56, 250) 100%);
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 @media (max-width: 1024px) {
@@ -185,6 +229,11 @@ body {
     height: 100%;
     -o-object-fit: cover;
        object-fit: cover;
+  }
+
+  .about .about-container {
+    display: flex;
+    flex-direction: column-reverse;
   }
 }
 @media (max-width: 440px) {
