--- a/src/assets/component/_about.scss
+++ b/src/assets/component/_about.scss
@@ -14,6 +14,7 @@
         }
         .about-content{
             max-width: 500px;
+            padding: 0 30px;
             h3{
                 font-weight: 600;
                 font-size: 22px;
