--- a/src/assets/component/_responsive.scss
+++ b/src/assets/component/_responsive.scss
@@ -9,9 +9,6 @@
     }
 }
 @media (max-width: 768px) {
-    body{
-        overflow: hidden;
-    }
     .header{
         padding: 10px 40px;
         .logo{
@@ -63,7 +60,7 @@
             margin-top: 10px;
             display: flex;
             flex-direction: column;
-            padding: 40px;
+            padding: 20px;
             .banner-text{
                 margin-bottom: 20px;
                 .banner-text{
@@ -94,6 +91,19 @@
         .about-container{
             display: flex;
             flex-direction: column-reverse;
+            padding: 20px;
+            h3{
+                font-size: 18px;
+            }
+            h1{
+                font-size: 26px;
+                letter-spacing: 1.3;
+            }
+            .about-text{
+                p{
+                    font-size: 14px;
+                }
+            }
         }
     }
     
@@ -123,5 +133,26 @@
         }
        
     }
+    .about{
+        .about-container{
+            padding: 20px;
+            .about-content{
+                padding: 0;
+            }
+            h3{
+                font-size: 14px;
+            }
+            h1{
+                font-size: 22px;
+                letter-spacing: 1.3;
+            }
+            .about-text{
+                p{
+                    font-size: 12px;
+                }
+            }
+        }
+    }
+    
     
 }
