--- a/src/assets/component/_reset.scss
+++ b/src/assets/component/_reset.scss
@@ -16,7 +16,8 @@ a{
 }
 body{
     background: linear-gradient(90deg, rgba(186,35,254,1) 0%, rgba(159,47,255,1) 18%, rgba(132,56,250,1) 100%);
+    // background-color: #fff;
 }
-html{
-    scroll-behavior: smooth;
-}
+// html{
+//     scroll-behavior: smooth;
+// }
