--- a/src/assets/component/_variable.scss
+++ b/src/assets/component/_variable.scss
@@ -8,6 +8,7 @@ $---grey: #4b4b4b;
 $--color-black: #000;
 $--color-white: #fff;
 $--color-white-header: rgba(255, 255, 255, 0.785);
+$-color-333: #333;
 $--red: #c0392b;
 $--color-p: #F5F5F5;
 
