--- a/src/assets/component/_banner.scss
+++ b/src/assets/component/_banner.scss
@@ -5,6 +5,7 @@
         align-items: center;
         padding: 50px;
         .banner-text{
+            padding: 50px;
             h3{
                 font-size: 22px;
                 margin-bottom: 10px;
@@ -19,6 +20,15 @@
             p{
                 font-size: 16px;
                 color: $--color-p;
+                margin-bottom: 30px;
+            }
+            #btn{
+                padding: 10px 30px;
+                background-color: $--bg-btn;
+                border-radius: 25px;
+                color: $--color-white;
+                font-size: 18px;
+                cursor: pointer;
             }
         }
         img{
