--- a/src/assets/component/_mixin.scss
+++ b/src/assets/component/_mixin.scss
@@ -1,11 +1,10 @@
-@mixin buttonStyle {
-    // css cho button
-    //....
-}  
-@mixin mainStyle {
-    // css cho main
-    // .....
-} 
+// @mixin buttonStyle {
+    
+// }  
+// @mixin mainStyle {
+//     // css cho main
+//     // .....
+// } 
 /* xong sang bên kia có nút button sẽ bỏ vào or vào index.scss như sau
     vd: 
     button{
