--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -1,10 +1,11 @@
+@import './component/reset';
 @import './component/variable';
 @import './component/header';
 @import './component/banner';
 @import './component/about';
+@import './component/services';
 @import './component/slider';
 @import './component/mixin';
-@import './component/reset';
 @import './component/responsive';
 
 
