--- a/src/assets/component/_banner.scss
+++ b/src/assets/component/_banner.scss
@@ -23,6 +23,7 @@
                 margin-bottom: 30px;
             }
             #btn{
+                // @include buttonStyle();
                 padding: 10px 30px;
                 background-color: $--bg-btn;
                 border-radius: 25px;
