--- a/src/assets/component/_banner.scss
+++ b/src/assets/component/_banner.scss
@@ -5,7 +5,7 @@
         align-items: center;
         padding: 50px;
         .banner-text{
-            padding: 50px;
+            // padding: 50px;
             h3{
                 font-size: 22px;
                 margin-bottom: 10px;
