--- a/src/assets/component/_responsive.scss
+++ b/src/assets/component/_responsive.scss
@@ -7,15 +7,7 @@
             padding: 8px 10px;  
         }
     }
-    .counter-up-container{
-        padding: 0 40px;
-        .container {
-            margin: 0 20px;
-            height: 26vmin;
-            width: 26vmin;
-            font-size: 12px;
-          }
-    }
+    
 }
 @media (max-width: 768px) {
     .header{
@@ -69,9 +61,9 @@
             margin-top: 10px;
             display: flex;
             flex-direction: column;
-            padding: 10px;
+            // padding: 20px;
             .banner-text{
-                padding: 30px;
+                // padding: 30px;
                 margin-bottom: 20px;
                 .banner-text{
                     h3{
@@ -139,7 +131,7 @@
 @media (max-width: 440px){
     .banner{
         .banner-container{
-            padding: 0px;
+            // padding: 0px;
             .banner-text{
                 margin-top: 10px;
                 .banner-text{
